welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:6: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
if (a+b=10 || b+c=10 || c+a= 10) return 10;  
     ^blueTicket:7: error: value || is not a member of Int
if (sumA=sumB+10 ||sumA=sumC+10) return 5;
                 ^blueTicket:7: error: type mismatch;
 found   : Unit
 required: Boolean
if (sumA=sumB+10 ||sumA=sumC+10) return 5;
        ^